# get-cli

./: .get.example.yml  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
get_cli/: __init__.py  __main__.py  cli.py  constants.py  controller.py  main.py  service.py  storage.py
tests/: mocks.py  test_e2e.py  test_service.py  test_storage.py
