[tool.poetry]
name = "get-cli"
version = "0.1.0"
description = "A simple unsafe cli tool to store and fetch data locally."
authors = ["noamtamir <noam.tamir@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.7.0"}
pyperclip = "^1.8.2"
pyyaml = "^6.0"

[tool.poetry.scripts]
get = "get_cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
